# trans-cvc

./: CMakeLists.txt  README.md
inc/contour/: Bin.h  BucketSearch.h  CellQueue.h  CellSearch.h  Conplot.h  Dataset.h  basic.h  commdata.h  compute.h  conplot2d.h  conplot3d.h  conplotreg2.h  conplotreg3.h  contour.h  contour2d.h  contour3d.h  data.h  datareg2.h  datareg3.h  datasetreg2.h  datasetreg3.h  datasetslc.h  datasetvol.h  dataslc.h  datavol.h  dict.h  dirseeds.h  dirseedsreg2.h  edgehash.h  endian_io.h  hash.h  inttree.h  ipqueue.h  iqueue.h  queue.h  rangeprop.h  rangesweep.h  regprop.h  regprop2.h  respprop2.h  (+9 more)
inc/cvc/: algorithm.h  app.h  bounding_box.h  bunny.h  composite_function.h  config.h.cmake  dimension.h  endians.h  exception.h  geometry.h  geometry_file_io.h  hdf5_utils.h  namespace.h  project_verts.h  state.h  state_object.h  types.h  upToPowerOfTwo.h  utility.h  volmagick.h  volume.h  volume_file_info.h  volume_file_io.h  voxels.h
inc/fast_contouring/: FastContouring.h  Quaternion.h  Ray.h  Vector.h
inc/multi_sdf/: mesh_io.h
inc/sign_distance_function/: common.h  head.h  sdfLib.h
src/: CMakeLists.txt
src/contour/: CMakeLists.txt  CellQueue.cpp  CellSearch.cpp  bucketsearch.cpp  compute.cpp  conplot.cpp  conplot2d.cpp  conplot3d.cpp  conplot_p.cpp  conplotreg2.cpp  conplotreg3.cpp  contour.cpp  contour2d.cpp  contour3d.cpp  cubes.cpp  data.cpp  datareg2.cpp  datareg3.cpp  datasetslc.cpp  datasetvol.cpp  dataslc.cpp  datavol.cpp  dict.cpp  dirseeds.cpp  dirseedsreg2.cpp  edgehash.cpp  endian_io.cpp  hash.cpp  inttree.cpp  ipqueue.cpp  queue.cpp  range.cpp  rangeprop.cpp  rangesweep.cpp  regprop.cpp  regprop2.cpp  respprop2.cpp  seedall.cpp  seedcells.cpp  seedchkr2.cpp  (+5 more)
src/cvc/: CMakeLists.txt  algorithm.cpp  anisotropic_diffusion.cpp  app.cpp  bilateral_filter.cpp  bunny_io.cpp  contrast_enhancement.cpp  cvcraw_io.cpp  gdtv_filter.cpp  geometry.cpp  geometry_file_io.cpp  hdf5_io.cpp  hdf5_utils.cpp  mrc_io.cpp  null_io.cpp  off_io.cpp  rawiv_io.cpp  rawv_io.cpp  smoothing.cpp  spider_io.cpp  state.cpp  trans-cvc.bat.cmake  trans-cvc.cpp  utility.cpp  volume.cpp  volume_file_info.cpp  volume_file_io.cpp  voxels.cpp  vtk_io.cpp  xmlrpc_client.cpp  xmlrpc_server.cpp
src/cvc/SDF/Geometry/: SceneArrayNode.h
src/cvc/SDF/VolumeFileTypes/: SimpleVolumeData.cpp
src/cvc/cvc-mesher/VolMagick/: BoundingBox.h  INR.cpp  MRC.cpp  Spider.cpp  VolMagick.h
src/cvc/cvc-mesher/contour/: bucketsearch.cpp  cellqueue.cpp  conplot.cpp  conplot2d.cpp  conplot3d.cpp  conplot_p.cpp  conplotreg2.cpp  conplotreg3.cpp  contour2d.cpp  contour3d.cpp  data.cpp  datareg2.cpp  datareg3.cpp  dataslc.cpp  datavol.cpp  edgehash.cpp  inttree.cpp  ipqueue.h  regprop.cpp  regprop2.cpp  respprop2.cpp  seedall.cpp  seedcells.cpp  seedchkr2.cpp  seedchkr3.cpp  segtree.cpp
src/cvc/libiimod/: b3dutil.c  b3dutil.h  cfsemshare.h  hvemtypes.h  iilikemrc.c  iimage.c  iimage.h  iimrc.c  iitif.c  ilist.c  islice.c  mrcc.h  mrcfiles.c  mrcfiles.h  mrcsec.c  mrcslice.c  mrcslice.h  notiffio.h  parallelwrite.c  plist.c  sliceproc.c  sliceproc.h  tiffstub.c
src/fast_contouring/: CMakeLists.txt  ContourGeometry.cpp  FastContouring.cpp  MarchingCubesBuffers.cpp  Matrix.cpp  Quaternion.cpp  Ray.cpp  Tuple.cpp  Vector.cpp
src/multi_sdf/: CMakeLists.txt  mesh_io.cpp
src/sign_distance_function/: CMakeLists.txt  common.cpp  compute.cpp  head.cpp  init.cpp  new_adjust.cpp  octree.cpp  propagate.cpp  sdfLib.cpp
src/xmlrpc/: CMakeLists.txt
